--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -1,16 +1,16 @@
 {# Import the theme's layout. #}
 {% extends "!layout.html" %}
 
-{# Custom CSS overrides #}
-{% set extra_css_files = ['_static/my-styles.css'] %}
+
+{# Extra CSS files.#}
+{% set extra_css_files = ['_static/css/my-styles.css'] %}
+
 
 {% block footer %}
-
-<script src="http://os.alfajango.com/js/jquery.easytabs.min.js" type="text/javascript"></script>
-
-<script>
-    $('.tab-container').easytabs({
-        animate: false
-    });
-</script>
+    <script type="text/javascript" src="{{ pathto('./_static/js/jquery.easytabs.min.js', 1) }}"></script>
+    <script>
+        $('.tab-container').easytabs({
+            animate: false
+        });
+    </script>
 {% endblock %}
